--- a/FeiG/FeiG.vcxproj.filters
+++ b/FeiG/FeiG.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClInclude Include="feigdef.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FileClient.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FileServer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FeiG.cpp">
@@ -81,6 +87,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="UserClient.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FileClient.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FileServer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
