--- a/FeiG/FeiG.vcxproj
+++ b/FeiG/FeiG.vcxproj
@@ -103,6 +103,8 @@
     <ClInclude Include="ChildView.h" />
     <ClInclude Include="FeiG.h" />
     <ClInclude Include="feigdef.h" />
+    <ClInclude Include="FileClient.h" />
+    <ClInclude Include="FileServer.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -115,6 +117,8 @@
     <ClCompile Include="ChatView.cpp" />
     <ClCompile Include="ChildView.cpp" />
     <ClCompile Include="FeiG.cpp" />
+    <ClCompile Include="FileClient.cpp" />
+    <ClCompile Include="FileServer.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
